# Grok-Api

./: .env.example  api_server.py  pyproject.toml
core/: grok.py
core/mappings/: grok.json  txid.json
