[project]
name = "grok-api-server"
version = "0.1.0"
description = "OpenAI-compatible API wrapper for Grok"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "curl_cffi>=0.7.0", # Core request lib
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0", # Quản lý .env
    "colorama>=0.4.6",
    "coincurve>=19.0.0"
]

[tool.uv]
dev-dependencies = []